начал оформлять форму модалки

--- a/css/style.css
+++ b/css/style.css
@@ -792,6 +792,88 @@ img {
   fill: var(--primary-white-color);
 }
 
+.subscribe {
+  width: 570px;
+  margin-left: 94px;
+  margin-right: 0;
+}
+
+.subscribe-form {
+  display: flex;
+  margin-top: 20px;
+}
+
+.subscribe-form input {
+  width: 358px;
+  height: 50px;
+  margin-top: 0;
+
+  border: 1px solid rgba(255, 255, 255, 0.3);
+  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
+  border-radius: 4px;
+
+  background: var(--footer-bg-color);
+  color: var(--primary-white-color);
+}
+
+.subscribe-label {
+  width: 219px;
+
+  font-family: 'Roboto';
+  font-style: normal;
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 1.14;
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
+
+  color: var(--primary-white-color);
+}
+
+.subscribe-form input::placeholder {
+  width: 47px;
+  padding: 15px 15px 15px 15px;
+
+  font-family: 'Roboto';
+  font-style: normal;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 1.25;
+
+  letter-spacing: 0.03em;
+
+  color: var(--footer-contacts-text-color);
+}
+
+.subscribe-btn {
+  width: 200px;
+  height: 50px;
+  padding: 10px 29px;
+  margin-left: 12px;
+  display: flex;
+  align-items: center;
+  text-align: center;
+
+  border-radius: 4px;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  border: 1px solid var(--accent-color);
+
+  font-family: 'Roboto';
+  font-style: normal;
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 1.88;
+  letter-spacing: 0.06em;
+  color: var(--primary-white-color);
+
+  background: var(--accent-color);
+}
+
+.subscribe-icon {
+  margin-left: 10px;
+  fill: var(--primary-white-color);
+}
+
 /* -----------------------------------------------MODAL------------------------------------------------- */
 .backdrop {
   position: fixed;
@@ -830,8 +912,7 @@ img {
     0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 4px;
 
-  transform: translate(-50%, -50%), scale(1);
-  transition: transform 400ms var(--animation-timing);
+  transition: transform 400ms var(--animation-timing), scale(1);
 }
 
 .close-icon {
@@ -850,4 +931,104 @@ img {
   border-radius: 50%;
   border: 1px solid var(--modal-bg);
   cursor: pointer;
+}
+
+/* -----------------------------------------------MODAL-FORM------------------------------------------------- */
+
+.modal-form {
+  padding: 0 40px;
+}
+
+.modal-title {
+  width: 448px;
+  margin-top: 40px;
+  margin-bottom: 12px;
+
+  font-family: 'Roboto';
+  font-style: normal;
+  font-weight: 700;
+  font-size: 20px;
+  line-height: 1.15;
+  text-align: center;
+  letter-spacing: 0.03em;
+
+  color: var(--primary-text-color);
+}
+
+.modal-data {
+  display: flex;
+  flex-direction: column;
+  position: relative;
+}
+
+.modal-data-input {
+  width: 448px;
+  height: 40px;
+  margin-bottom: 10px;
+
+  border: 1px solid rgba(33, 33, 33, 0.2);
+  border-radius: 4px;
+}
+
+.modal-icon {
+  position: absolute;
+  bottom: 50%;
+  left: 11px;
+}
+
+.modal-data-label {
+  margin-bottom: 4px;
+  font-size: 12px;
+  line-height: 1.16;
+  letter-spacing: 0.01em;
+
+  color: var(--secondary-text-color);
+}
+
+.modal-agree {
+  font-family: 'Roboto';
+  font-style: normal;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 1.71;
+  letter-spacing: 0.03em;
+
+  color: var(--secondary-text-color);
+}
+
+.modal-textarea {
+  width: 448px;
+  height: 120px;
+  padding: 12px 16px;
+  margin-bottom: 20px;
+  resize: none;
+
+  border: 1px solid rgba(33, 33, 33, 0.2);
+  border-radius: 4px;
+}
+
+.modal-btn {
+  width: 200px;
+  height: 50px;
+  padding: 10px 55px;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 30px;
+  display: flex;
+  align-items: center;
+  text-align: center;
+
+  font-family: 'Roboto';
+  font-style: normal;
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 1.88;
+  letter-spacing: 0.06em;
+  cursor: pointer;
+
+  color: var(--primary-white-color);
+  background: var(--accent-color);
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  border: 1px solid var(--accent-color);
+  border-radius: 4px;
 }
