--- a/css/style.css
+++ b/css/style.css
@@ -812,7 +812,7 @@ img {
   filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
   border-radius: 4px;
 
-  background: var(--footer-bg-color);
+  background: transparent;
   color: var(--primary-white-color);
 }
 
@@ -933,7 +933,7 @@ img {
   justify-content: center;
   align-items: center;
 
-  background: #ffffff;
+  background: var(--primary-white-color);
   border-radius: 50%;
   border: 1px solid var(--modal-bg);
   cursor: pointer;
@@ -967,9 +967,10 @@ img {
 }
 
 .modal-data-input {
-  width: 448px;
+  width: 100%;
   height: 40px;
   margin-bottom: 10px;
+  padding-left: 42px;
 
   border: 1px solid rgba(33, 33, 33, 0.2);
   border-radius: 4px;
@@ -979,6 +980,24 @@ img {
   position: absolute;
   bottom: 20px;
   left: 12px;
+  border: none;
+}
+
+.modal-data-input:focus,
+.modal-data-input:hover {
+  border: 1px solid var(--accent-color);
+  outline: none;
+}
+
+.modal-data-input:focus + .modal-icon,
+.modal-data-input:hover + .modal-icon {
+  fill: var(--accent-color);
+}
+
+.modal-textarea:hover,
+.modal-textarea:focus {
+  border: 1px solid var(--accent-color);
+  outline: none;
 }
 
 .modal-data-label {
@@ -991,7 +1010,7 @@ img {
 }
 
 .modal-textarea {
-  width: 448px;
+  width: 100%;
   height: 120px;
   padding: 12px 16px;
   margin-bottom: 20px;
@@ -999,6 +1018,14 @@ img {
 
   border: 1px solid rgba(33, 33, 33, 0.2);
   border-radius: 4px;
+}
+
+.modal-textarea::placeholder {
+  font-size: 12px;
+  line-height: 14px;
+  letter-spacing: 0.01em;
+
+  color: rgba(117, 117, 117, 0.5);
 }
 
 .modal-checkbox {
@@ -1033,6 +1060,11 @@ img {
   color: var(--primary-white-color);
   background: var(--accent-color);
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
-  border: 1px solid var(--accent-color);
+  border: none;
   border-radius: 4px;
+}
+
+.modal-btn:hover,
+.modal-btn:focus {
+  background: var(--secondary-accent-color);
 }
