--- a/css/style.css
+++ b/css/style.css
@@ -1034,17 +1034,53 @@ img {
 }
 
 .modal-checkbox {
+  display: flex;
+  justify-content: center;
   font-size: 14px;
   line-height: 1.71;
   letter-spacing: 0.03em;
-
   color: var(--secondary-text-color);
 }
 
-.modal-agree {
-  display: flex;
-  justify-content: center;
+.checkbox-input {
+  margin-right: 8px;
+  position: absolute;
+  white-space: nowrap;
+  width: 1px;
+  height: 1px;
+  overflow: hidden;
+  border: 0;
+  padding: 0;
+  clip: rect(0 0 0 0);
+  clip-path: inset(50%);
+  margin: -1px;
 }
+
+.checkbox-label {
+  display: block;
+}
+
+.checkbox-icon {
+  display: inline-block;
+  width: 16px;
+  height: 15px;
+  margin-right: 8px;
+  border: 1px solid var(--secondary-text-color);
+  border-radius: 2px;
+}
+
+.checkbox-text-agree {
+  color: var(--accent-color);
+}
+
+.checkbox-input:checked + .checkbox-icon {
+  border: none;
+  background-color: var(--accent-color);
+  background-image: url(../images/form-icon-check.svg);
+  background-size: contain;
+  background-origin: content-box;
+}
+
 .modal-btn {
   width: 200px;
   height: 50px;
