--- a/css/style.css
+++ b/css/style.css
@@ -1043,7 +1043,9 @@ img {
   color: rgba(117, 117, 117, 0.5);
 }
 
-.modal-checkbox {
+/* Checkbox в CSS */
+
+/* .modal-checkbox {
   display: flex;
   justify-content: center;
   font-size: 14px;
@@ -1083,6 +1085,47 @@ img {
   background-image: url(../images/form-icon-check.svg);
   background-size: contain;
   background-origin: content-box;
+} */
+
+/* Checkbox в спрайте */
+
+.checkbox-label span {
+  margin-right: 8px;
+  border: 1px solid var(--secondary-text-color);
+  border-radius: 2px;
+  transition: border 250ms var(--animation-timing), background-color 250ms var(--animation-timing);
+}
+
+.checkbox-icon {
+  display: block;
+}
+
+.checkbox-input:hover + .checkbox-label span,
+.checkbox-input:focus + .checkbox-label span {
+  border: 1px solid var(--accent-color);
+}
+
+.checkbox-input:checked + .checkbox-label span {
+  border: 1px solid var(--accent-color);
+  background-color: var(--accent-color);
+}
+.checkbox-label {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 14px;
+  line-height: 1.71;
+  letter-spacing: 0.03em;
+
+  color: var(--secondary-text-color);
+}
+
+.checkbox-text-agree {
+  font-size: 14px;
+  line-height: 1.71;
+  letter-spacing: 0.03em;
+
+  color: var(--accent-color);
 }
 
 .modal-btn {
